--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -11,7 +11,7 @@
         li.nav-item(class=(title === 'Home') ? 'active' : undefined)
           a.nav-link(href='/') Home
         li.nav-item(class=(title === 'Post') ? 'active' : undefined)
-          a.nav-link(href='/api') Blood Donation Requests
+          a.nav-link(href='/requests/new') Blood Donation Requests
         li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
           a.nav-link(href='/contact') Contact
         //- li.nav-item(class=(title === 'Status') ? 'active' : undefined)
